# crinetics-tlf-studio

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  launch.bat
backend/: BUILD.md  Dockerfile  backend.spec  config.py  main.py  pyproject.toml  run_server.py  worker.py
backend/models/: __init__.py  ai.py  job.py  shell.py  study.py
backend/routers/: ai.py  jobs.py  outputs.py  preview.py  settings.py  shells.py  studies.py
backend/services/: __init__.py  adam_service.py  ai_service.py  audit_service.py  data_service.py  generation_service.py  outputs_service.py  preview_service.py  sap_service.py  shell_ids.py  shell_service.py  study_service.py  tlf_runtime.py
backend/tasks/: generation.py
backend/tests/: conftest.py  test_ai.py  test_audit_trail.py  test_jobs.py  test_outputs.py  test_registry_dispatch.py  test_shells.py  test_studies.py
desktop/: README.md  afterPack.js  loading.html  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: assemble-frontend.mjs  build-app.mjs  ensure-frontend.mjs
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/data/: changelog.json
frontend/src/hooks/: useAi.ts  useJobs.ts  usePreview.ts  useShells.ts  useStudy.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/store/: jobStore.ts  shellStore.ts  studyStore.ts
frontend/src/types/: ai.ts  audit.ts  desktop.d.ts  job.ts  settings.ts  shell.ts  study.ts
scripts/: vendor_tlf.py
(+35 files in other folders)
